# VCAN-Data-Display-QT-

./: README.md  run.sh
QT/DMC/: CMakeLists.txt  Main.qml  candatamodel.cpp  candatamodel.h  cans_info.cpp  cans_info.h  main.cpp
speedo_feeder/: Dockerfile  Makefile
speedo_feeder/headers/: can.hpp  speed.hpp
speedo_feeder/scripting/: speed_feeder.sh
speedo_feeder/src/: can.cpp  main.cpp  speed.cpp
